--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>spsmb.sqlite.DShowData</mainClass>
+                    <mainClass>spsmb.sqlite.ShowCovid</mainClass>
                 </configuration>
             </plugin>
             <!--plugin>
